# gecko

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  meson.build
cblock/: meson.build
cblock/inc/gecko/cblock/: Blocking.h  BlockingClassifier.h
cblock/src/: Blocking.cpp  BlockingClassifier.cpp
cblock/tst/: cblock_tests.cpp  meson.build
gblock/: meson.build
gblock/inc/gecko/gblock/: Blocking.h  BlockingClassifier.h  Graph.h
gblock/src/: Blocking.cpp  BlockingClassifier.cpp  Graph.cpp
gblock/tst/: gblock_tests.cpp  meson.build
gmds_core/: meson.build
gmds_core/cad/: meson.build
gmds_core/cad/inc/gmds/cad/: GeomManager.h  GeomPoint.h  GeomVolume.h
gmds_core/cadfac/: meson.build
gmds_core/cadfac/inc/gmds/cadfac/: FACCurve.h  FACManager.h  FACPoint.h  FACSurface.h  FACVolume.h
gmds_core/cadfac/src/: FACCurve.cpp  FACManager.cpp  FACSurface.cpp
gmds_core/cadfac/tst/: fac_manager_tests.cpp  geom_linker_tests.cpp  geom_topology_tests.cpp  meson.build
gmds_core/ig/: meson.build
gmds_core/ig/inc/gmds/ig/: Region.h
gmds_core/ig/tst/: boolean_mark_tests.cpp  meson.build
gmds_core/igalgo/: meson.build
gmds_core/igalgo/inc/gmds/igalgo/: BoundaryExtractor3D.h
gmds_core/igalgo/tst/: boundary_extractor_tests.cpp  boundary_operator_tests.cpp  grid_builder_tests.cpp  meson.build  surface_reorient_tests.cpp
gmds_core/io/: meson.build
gmds_core/io/tst/: meson.build  reader_tests.cpp  writer_tests.cpp
gmds_core/math/: meson.build
gmds_core/math/inc/gmds/math/: Vector.h
gmds_core/math/tst/: meson.build
gmds_core/utils/: meson.build
gmds_core/utils/inc/gmds/utils/: BitVector.h
gmds_core/utils/src/: BitVector.cpp
gmds_core/utils/tst/: meson.build
gmdsblock/: meson.build
gmdsblock/inc/gecko/cblock/: Blocking.h
gmdsblock/src/: Blocking.cpp
gmdsblock/tst/: cblock_tests.cpp  meson.build
inc/: my_class.h
mcts/: meson.build
mcts-c/: meson.build
mcts-c/inc/gecko/mcts/: BlockingRewardFunction.h
mcts-c/inc/gecko/mcts-c/: BlockingAction.h  BlockingRewardFunction.h  BlockingState.h
mcts-c/spam/src/: MCTSAgent.cpp
mcts-c/src/: BlockingAction.cpp  BlockingRewardFunction.cpp  BlockingState.cpp  main_blocker.cpp
mcts/inc/gecko/mcts/: BlockingAction.h  BlockingState.h
mcts/spam/inc/mcts/: MCTSSelectionFunction.h
mcts/spam/src/: MCTSAgent.cpp
mcts/src/: BlockingAction.cpp  BlockingRewardFunction.cpp  BlockingState.cpp  main_blocker.cpp
src/: meson.build  my_class.cpp
subprojects/: ann.wrap  cgal.wrap
subprojects/CGAL-5.6.2/: meson.build
subprojects/Catch2-3.8.0/: .meson-subproject-wrap-hash.txt
subprojects/boost-1.87.0/: meson.build
subprojects/eigen-3.4.0/: meson.build
subprojects/nlohmann_json-3.11.3/: .meson-subproject-wrap-hash.txt
subprojects/predicates/: meson.build
test/: split.cpp
test_data/: params.json
tst/: meson.build  test1.cpp  test2.cpp
